CLOUD/kubernetes/Dashboard/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    type: dashboard
    tier: cloud
  name: dashboard
spec:
  type: NodePort
  selector:
    type: dashboard
    tier: cloud
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
    - name: "5000"
      port: 5000
      targetPort: 5000
      nodePort: 30500
status:
  loadBalancer: {}
