CLOUD/kubernetes/Dashboard/sco-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sco-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/sco-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sco-network: "true"
